Update my portfolio
Removed some of the projects and added 2 projects

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
     <!-- Portfolio Modals -->
 
     <!-- Portfolio Modal 8 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog"
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog"
         aria-labelledby="portfolioModal8Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -503,21 +503,21 @@
                 <div class="modal-body text-center">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Blitz</h2>
-                                <!-- Icon Divider -->
-                                <div class="divider-custom">
+                            <div class="col-lg-8"> -->
+    <!-- Portfolio Modal - Title -->
+    <!-- <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Blitz</h2> -->
+    <!-- Icon Divider -->
+    <!-- <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
-                                </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-11.jpg" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">October 2019 - I created Blitz as a part of Foundations of Front-End Web
+                                </div> -->
+    <!-- Portfolio Modal - Image -->
+    <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/proj-11.jpg" alt=""> -->
+    <!-- Portfolio Modal - Text -->
+    <!-- <p class="mb-5">October 2019 - I created Blitz as a part of Foundations of Front-End Web
                                     Development 2017 course and it is the very first website which I built fully. All
                                     the pages are included, not just the home page.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
@@ -530,7 +530,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- Portfolio Modal 10 -->
@@ -563,7 +563,8 @@
                                     and the boxes can be controlled with keyboard buttons.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close</button>
-                                <a class="btn btn-primary" href="projects/13-gridtheme/index.html" target="_blank">See
+                                <a class="btn btn-primary"
+                                    href="projects/28-jsProjects/0-fiftyProjects/38-boxChaser.html" target="_blank">See
                                     Page</a>
                             </div>
                         </div>
@@ -573,7 +574,7 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 13 -->
+    <!-- Portfolio Modal 13
     <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog"
         aria-labelledby="portfolioModal13Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
@@ -584,21 +585,21 @@
                 <div class="modal-body text-center">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Gallery</h2>
-                                <!-- Icon Divider -->
-                                <div class="divider-custom">
+                            <div class="col-lg-8"> -->
+    <!-- Portfolio Modal - Title -->
+    <!-- <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Gallery</h2> -->
+    <!-- Icon Divider -->
+    <!-- <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
-                                </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-16.jpg" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">December 2019 - Gallery is another project I built while going through
+                                </div> -->
+    <!-- Portfolio Modal - Image -->
+    <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/proj-16.jpg" alt=""> -->
+    <!-- Portfolio Modal - Text -->
+    <!-- <p class="mb-5">December 2019 - Gallery is another project I built while going through
                                     the "CSS Grid Course" by Wes Bos. The differnce from the project is that it has some
                                     animation in it and some javascript as well.
                                 <p>
@@ -612,10 +613,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 14 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal14" tabindex="-1" role="dialog"
+    <!-- <div class="portfolio-modal modal fade" id="portfolioModal14" tabindex="-1" role="dialog"
         aria-labelledby="portfolioModal14Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -625,21 +626,21 @@
                 <div class="modal-body text-center">
                     <div class="container">
                         <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Taco Joint</h2>
-                                <!-- Icon Divider -->
-                                <div class="divider-custom">
+                            <div class="col-lg-8"> -->
+    <!-- Portfolio Modal - Title -->
+    <!-- <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Taco Joint</h2> -->
+    <!-- Icon Divider -->
+    <!-- <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
                                     <div class="divider-custom-icon">
                                         <i class="fas fa-star"></i>
                                     </div>
                                     <div class="divider-custom-line"></div>
-                                </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-17.jpg" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">December 2019 - Taco Join is the final project that I built using the
+                                </div> -->
+    <!-- Portfolio Modal - Image -->
+    <!-- <img class="img-fluid rounded mb-5" src="img/portfolio/proj-17.jpg" alt=""> -->
+    <!-- Portfolio Modal - Text -->
+    <!-- <p class="mb-5">December 2019 - Taco Join is the final project that I built using the
                                     "CSS Grid Course" by Wes Bos. It looks pretty awesome although there are not that
                                     many elements or any animation but it does have some javascript in
                                     it.
@@ -654,7 +655,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 15 -->
     <div class="portfolio-modal modal fade" id="portfolioModal15" tabindex="-1" role="dialog"
@@ -883,10 +884,10 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-31.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">August 6, 2020 - To build this app, I used the latest, fastest and
-                                    coolest technologies such as REACT, Firebase (Google database service) and
-                                    Material-ui (instead of Bootstrap). It's fully functional and all messages are
-                                    stored in my Firebase database</p>
+                                <p class="mb-5">August 6, 2020 - I built this full-stack, fully-featured messenger
+                                    application using React, Firebase, and Material UI. I deployed it with Firebase
+                                    hosting which is a server-less cloud functioning to process each of the messages
+                                    sent and real-time database with Firebase's Firestore.</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="https://facebook-messenger-7818b.web.app"
@@ -924,7 +925,11 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-32.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">23:50/August 9/2020 - YouTube Clone Done!</p>
+                                <p class="mb-5">23:50/August 9/2020 - YouTube Clone Done! Used React, Material UI
+                                    (icon sets), Firebase (host data real time, deploy website live), Flexbox
+                                    (responsive design), React Router (handle several pages). It doesn't refresh when
+                                    you search for videos so it's fast!
+                                </p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close</button>
                                 <a class="btn btn-primary" href="https://uzutube.web.app/" target="_blank">See Page</a>
@@ -961,7 +966,12 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-34.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">23:30/August 19/2020 - Uz Netflix Done!</p>
+                                <p class="mb-5">23:30/August 19/2020 - Uz Netflix Done! Used React, Axios, Material UI
+                                    (design), Firebase (host data real time, deploy website live), Flexbox
+                                    (responsive design). It fetches all the data from a third-party TMDB API so when you
+                                    refresh
+                                    the page, the movie trailers are updated and you can play them!
+                                </p>
                                 <!-- <p class="mb-5">17:30/August 13/2020 - Todo List Done!</p> -->
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close</button>
