update resume and portfolio
add uzkoogle to the portfolio

--- a/index.html
+++ b/index.html
@@ -217,18 +217,6 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Item 31 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal31">
-                        <div
-                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                            <div class="portfolio-item-caption-content text-center text-white">
-                                <i class="fas fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img class="img-fluid" src="img/portfolio/proj-31.jpg" alt="">
-                    </div>
-                </div>
 
                 <!-- Portfolio Item 34 -->
                 <div class="col-md-6 col-lg-4">
@@ -253,6 +241,19 @@
                             </div>
                         </div>
                         <img class="img-fluid" src="img/portfolio/proj-34.jpg" alt="">
+                    </div>
+                </div>
+
+                <!-- Portfolio Item 34 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal35">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-37.jpg" alt="">
                     </div>
                 </div>
 
@@ -858,48 +859,6 @@
         </div>
     </div>
 
-    <!-- Portfolio Modal 31 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal31" tabindex="-1" role="dialog"
-        aria-labelledby="portfolioModal31Label" aria-hidden="true">
-        <div class="modal-dialog modal-xl" role="document">
-            <div class="modal-content">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
-                </button>
-                <div class="modal-body text-center">
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">FB Messenger Clone
-                                </h2>
-                                <!-- Icon Divider -->
-                                <div class="divider-custom">
-                                    <div class="divider-custom-line"></div>
-                                    <div class="divider-custom-icon">
-                                        <i class="fas fa-star"></i>
-                                    </div>
-                                    <div class="divider-custom-line"></div>
-                                </div>
-                                <!-- Portfolio Modal - Image -->
-                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-31.jpg" alt="">
-                                <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">August 6, 2020 - I built this full-stack, fully-featured messenger
-                                    application using React, Firebase, and Material UI. I deployed it with Firebase
-                                    hosting which is a server-less cloud functioning to process each of the messages
-                                    sent and real-time database with Firebase's Firestore.</p>
-                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i
-                                        class="fas fa-times fa-fw"></i>Close</button>
-                                <a class="btn btn-primary" href="https://facebook-messenger-7818b.web.app"
-                                    target="_blank">See Page</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Portfolio Modal 32 -->
     <div class="portfolio-modal modal fade" id="portfolioModal32" tabindex="-1" role="dialog"
         aria-labelledby="portfolioModal32Label" aria-hidden="true">
@@ -954,7 +913,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title -->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Uz Netflix</h2>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Netflix Clone</h2>
                                 <!-- Icon Divider -->
                                 <div class="divider-custom">
                                     <div class="divider-custom-line"></div>
@@ -969,8 +928,7 @@
                                 <p class="mb-5">23:30/August 19/2020 - Uz Netflix Done! Used React, Axios, Material UI
                                     (design), Firebase (host data real time, deploy website live), Flexbox
                                     (responsive design). It fetches all the data from a third-party TMDB API so when you
-                                    refresh
-                                    the page, the movie trailers are updated and you can play them!
+                                    refresh the page, the movie trailers are updated and you can play them!
                                 </p>
                                 <!-- <p class="mb-5">17:30/August 13/2020 - Todo List Done!</p> -->
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
@@ -984,6 +942,51 @@
             </div>
         </div>
     </div>
+
+    <!-- Portfolio Modal 35 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal35" tabindex="-1" role="dialog"
+        aria-labelledby="portfolioModal35Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Google Clone</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-37.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">February 19, 2021 - I built this full-stack search engine using Google
+                                    API, React and Material UI. I deployed it with Firebase
+                                    hosting which is a server-less cloud functioning to process each query
+                                    sent and real-time database with Firebase's Firestore
+                                </p>
+                                <!-- <p class="mb-5">17:30/August 13/2020 - Todo List Done!</p> -->
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i
+                                        class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="https://uzkoogle.web.app/" target="_blank">See
+                                    Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
