feat: layout banner, promo, about, and menu"

--- a/projects/29-restaurant/index.html
+++ b/projects/29-restaurant/index.html
@@ -16,7 +16,9 @@
     <header>
       <!-- Navigation ----------------->
       <section class="nav_wrapper">
-        <a href="#home" class="logo">LAMBDA</a>
+        <a href="#home" class="logo">
+          <img src="img/logo.png" alt="logo">
+        </a>
         <div class="menu_wrapper">
           <nav class="nav_menu">
             <a href="#home">Home</a>
@@ -26,17 +28,17 @@
             <a href="#reviews">Reviews</a>
             <a href="#reservations">Reservations</a>
           </nav>
-          <nav class="social">
-            <a href="https://twitter.com/"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-            <a href="https://youtube.com/"><i class="fab fa-youtube" aria-hidden="true"></i></a>
-            <a href="https://facebook.com/"><i class="fab fa-facebook" aria-hidden="true"></i></a>
-          </nav>
+          <div class="social_icons">
+            <a href="https://twitter.com/"><i class="fab fa-twitter social_icon" aria-hidden="true"></i></a>
+            <a href="https://youtube.com/"><i class="fab fa-youtube social_icon" aria-hidden="true"></i></a>
+            <a href="https://facebook.com/"><i class="fab fa-facebook social_icon" aria-hidden="true"></i></a>
+          </div>
         </div>
       </section>
 
       <!-- Promotion ----------------------->
       <section class="promo">
-        <h1>the right ingredients for the right food</h1>
+        <h1 class="promo_heading">the right ingredients for the right food</h1>
         <img src="img/divider-top.png" class="divider" />
         <div class="promo_btns">
           <button class="btn-black btn">BOOK A TABLE</button>
@@ -48,134 +50,177 @@
     <!-- MAIN ------------------------------>
     <main>
       <!-- About --------------------------->
-      <section class="about_wrapper">
-        <article>
+      <section id="about">
+        <article class="about_article">
           <h2>Just the right food</h2>
-          <img src="img/divider-gold.png" alt="divider-gold">
-          <p>
+          <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+          <p class="about_text">
             If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back
             for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees
             make us hard to resist! Stop in today and check us out!
           </p>
-          <figure class="about_cook">
-            <img src="img/cook.png" alt="cook">
-          </figure>
+          <img src="img/cook.png" alt="cook" class="cook">
         </article>
-        <figure class="about_dish">
-          <img src="img/dish.png" alt="dish">
-        </figure>
+        <img src="img/dish.png" alt="dish" class="dish">
+        <div class="about-background"></div>
       </section>
 
       <!-- Ingredients ---------------------->
-      <section class="ingredients_wrapper">
+      <section id="ingredients">
         <article>
           <h2 class="ingredients_heading">Fine Ingredients</h2>
-          <img src="img/divider-gold.png" alt="divider-gold">
+          <img src="img/divider-white.png" alt="divider-gold" class="divider">
           <p class="ingredients_text">
             If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back
             for more. Perfect materials and freshly baked food, delicious Lambda cakes, muffins, and gourmet coffees
             make us hard to resist! Stop in today and check us out!
           </p>
-          <div class="ingredients_images">
-            <figure class="ingredients_images-wheat">
-              <img src="img/wheat.jpg" alt="wheat">
-            </figure>
-            <figure class="ingredients_images-crumbles">
-              <img src="img/crumbles.jpg" alt="crumbles">
-            </figure>
-            <figure class="ingredients_images-bread">
-              <img src="img/bread.jpg" alt="bread">
-            </figure>
+          <div class="ingredients_imgs">
+            <img src="img/wheat.jpg" alt="wheat">
+            <img src="img/crumbles.jpg" alt="crumbles">
+            <img src="img/bread.jpg" alt="bread">
           </div>
         </article>
       </section>
 
       <!-- Menu ----------------------------->
-      <section class="menu_wrapper">
+      <section id="menu">
+        <div class="menu-background"></div>
         <!-- Emmet Magic:(article.menu_group>h2.menu_heading{menu heading}+img[src="img/divider-gold.png"][alt="divider-gold"].divider-gold+(.menu_item>.food{foodname}+.price{foodprice}+p.description{food description})*3)*4 -->
-        <article class="menu_group">
-          <h2 class="menu_heading">Appetiser</h2>
-          <img src="img/divider-gold.png" alt="divider-gold" class="divider-gold">
-          <div class="menu_item">
-            <h3 class="food">Tzatsiki</h3>
-            <div class="price">$3.99</div>
-            <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
-          </div>
-          <div class="menu_item">
-            <h3 class="food">Aubergine Salad</h3>
-            <div class="price">$5.50</div>
-            <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
-          </div>
-          <div class="menu_item">
-            <h3 class="food">Aubergine Salad</h3>
-            <div class="price">$5.25</div>
-            <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
-          </div>
-        </article>
+        <div class="menu-groups">
+          <div class="menu-left">
+            <article class="menu_group">
+              <h2>Appetiser</h2>
+              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
 
-        <article class="menu_group">
-          <h2 class="menu_heading">Salads</h2>
-          <img src="img/divider-gold.png" alt="divider-gold" class="divider-gold">
-          <div class="menu_item">
-            <h3 class="food">Olive Special</h3>
-            <div class="price">$5.99</div>
-            <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
-            <p class="special">Special</p>
-          </div>
-          <div class="menu_item">
-            <h3 class="food">Greek Salad</h3>
-            <div class="price">$5.50</div>
-            <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
-          </div>
-          <div class="menu_item">
-            <h3 class="food">Gusto Salad</h3>
-            <div class="price">$5.25</div>
-            <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
-          </div>
-        </article>
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Tzatsiki</h3>
+                  <div>$3.99</div>
+                </div>
+                <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+              </div>
 
-        <article class="menu_group">
-          <h2 class="menu_heading">Starters</h2>
-          <img src="img/divider-gold.png" alt="divider-gold" class="divider-gold">
-          <div class="menu_item">
-            <h3 class="food">Haloumi</h3>
-            <div class="price">$3.99</div>
-            <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
-          </div>
-          <div class="menu_item">
-            <h3 class="food">Spinach Pie</h3>
-            <div class="price">$5.50</div>
-            <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
-          </div>
-        </article>
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Aubergine Salad</h3>
+                  <div>$5.50</div>
+                </div>
+                <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+              </div>
 
-        <article class="menu_group">
-          <h2 class="menu_heading">Main Dishes</h2>
-          <img src="img/divider-gold.png" alt="divider-gold" class="divider-gold">
-          <div class="menu_item">
-            <h3 class="food">Cornish Mackerel</h3>
-            <div class="price">$5.99</div>
-            <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Aubergine Salad</h3>
+                  <div>$5.25</div>
+                </div>
+                <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+              </div>
+            </article>
+
+            <article class="menu_group">
+              <h2 class="menu_heading">Salads</h2>
+              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Olive Special</h3>
+                  <div>$5.99</div>
+                </div>
+                <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+              </div>
+              <div class="special">
+                <p>Special</p>
+              </div>
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Greek Salad</h3>
+                  <div>$5.50</div>
+                </div>
+                <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+              </div>
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Gusto Salad</h3>
+                  <div>$5.25</div>
+                </div>
+                <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+              </div>
+            </article>
           </div>
-          <div class="menu_item">
-            <p class="special">Special</p>
-            <h3 class="food">Roast Lamb</h3>
-            <div class="price">foodprice</div>
-            <p class="description">food description</p>
+
+          <div class="menu-right">
+            <article class="menu_group">
+              <h2 class="menu_heading">Starters</h2>
+              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Haloumi</h3>
+                  <div>$3.99</div>
+                </div>
+                <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+              </div>
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Spinach Pie</h3>
+                  <div>$5.50</div>
+                </div>
+                <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+              </div>
+            </article>
+
+            <article class="menu_group">
+              <h2 class="menu_heading">Main Dishes</h2>
+              <img src="img/divider-gold.png" alt="divider-gold" class="divider">
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Cornish Mackerel</h3>
+                  <div>$5.99</div>
+                </div>
+                <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+              </div>
+
+              <div class="special">
+                <p>Special</p>
+              </div>
+              <div class="menu_item lamb">
+                <div class="food-price">
+                  <h3>Roast Lamb</h3>
+                  <div>$5.50</div>
+                </div>
+                <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+              </div>
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Fried Chicked</h3>
+                  <div>$5.25</div>
+                </div>
+                <p class="description">Pureed eggplant, garlic, green pepper and tomato dip.</p>
+              </div>
+
+              <div class="menu_item">
+                <div class="food-price">
+                  <h3>Pastitsio</h3>
+                  <div>$5.99</div>
+                </div>
+                <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
+              </div>
+            </article>
           </div>
-          <div class="menu_item">
-            <div class="food">Pastitsio</div>
-            <h3 class="price">$5.99</h3>
-            <p class="description">Refreshing traditional cucumber and garlic yoghurt dip.</p>
-          </div>
-        </article>
+        </div>
       </section>
 
       <!-- Reviews -------------------------->
       <section class="reviews_wrapper">
         <article>
           <h2 class="reviews_heading">Guest Reviews</h2>
-          <img src="img/divider-gold.png" class="divider-gold" />
+          <img src="img/divider-gold.png" class="divider" />
           <div class="reviews_content">
             <img src="img/quote.png" class="quote_sign" />
             <blockquote class="reviews_text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what
@@ -195,7 +240,7 @@
         </div>
         <form action="submit">
           <h2>Just the right food</h2>
-          <img src="img/divider-gold.png" alt="divider-gold" class="divider-gold">
+          <img src="img/divider-gold.png" alt="divider" class="divider">
           <p class="reservations_text">If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps
             our customers coming back for more. Perfect materials and freshly baked food.</p>
           <p class="reservations_text">
@@ -217,7 +262,7 @@
     </main>
 
     <!-- FOOTER ---------------------------->
-    <footer class="footer_wrapper" style="display: flex;">
+    <footer class="footer_wrapper">
       <article class="about">
         <h3 class="about_heading">About Us</h3>
         <img src="img/divider-white.png" alt="divider-white" class="divider-white">
